...
        android:id="@+id/id_avatar"
        android:layout_width="match_parent"
        android:layout_height="262dp"
        android:scaleType="fitXY" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="backButton"
        app:srcCompat="@drawable/ic_arrow_back_black_24dp"
        android:background="@android:color/transparent"/>

...
                android:text="@string/a_propos_de"
                android:textSize="15dp"/>
        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/imageButtonStar"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginLeft="325dp"
        android:layout_marginTop="230dp"
        android:background="@drawable/rounded_button"
        app:srcCompat="@drawable/ic_star_border_white_24dp" />
...
