package com.openclassrooms.entrevoisins.neighbour_list;

import android.support.test.rule.ActivityTestRule;
import android.support.test.runner.AndroidJUnit4;
import android.view.View;
import android.view.ViewGroup;
import android.view.ViewParent;

import com.openclassrooms.entrevoisins.R;
import com.openclassrooms.entrevoisins.ui.neighbour_list.ListNeighbourActivity;

import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.TypeSafeMatcher;
import org.junit.Before;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import static android.support.test.espresso.Espresso.onView;
import static android.support.test.espresso.action.ViewActions.click;
import static android.support.test.espresso.matcher.ViewMatchers.assertThat;
import static android.support.test.espresso.matcher.ViewMatchers.isDisplayed;
import static android.support.test.espresso.matcher.ViewMatchers.withContentDescription;
import static android.support.test.espresso.matcher.ViewMatchers.withId;
import static android.support.test.espresso.matcher.ViewMatchers.withParent;
import static android.support.test.espresso.matcher.ViewMatchers.withText;
import static com.openclassrooms.entrevoisins.utils.RecyclerViewItemCountAssertion.withItemCount;
import static org.hamcrest.Matchers.allOf;
import static org.hamcrest.core.IsNull.notNullValue;



/**
 * Test class for list of neighbours
 */
@RunWith(AndroidJUnit4.class)
public class FavoriteAddListTest {


    private static int FAVORITE_ITEMS_COUNT = 2;

    private ListNeighbourActivity mActivity;

    @Rule
    public ActivityTestRule<ListNeighbourActivity> mActivityRule =
            new ActivityTestRule(ListNeighbourActivity.class);

    @Before
    public void setUp() {
        mActivity = mActivityRule.getActivity();
        assertThat(mActivity, notNullValue());

    }

    @Test
    public void addNeighbour_inFavoriteList() {
        onView(withText("Caroline")).perform(click());

        onView(allOf(withId(R.id.imageButtonStar),
                childAtPosition(
                        childAtPosition(
                                withId(android.R.id.content),
                                0),
                        4),
                isDisplayed())).perform(click());

        onView(allOf(withId(R.id.backButton),
                childAtPosition(
                        childAtPosition(
                                withId(android.R.id.content),
                                0),
                        1),
                isDisplayed())).perform(click());

        onView(allOf(withContentDescription("Favorites"),
                childAtPosition(
                        childAtPosition(
                                withId(R.id.tabs),
                                0),
                        1),
                isDisplayed())).perform(click());

        onView(allOf(withId(R.id.list_neighbours),
                withParent(allOf(withId(R.id.container),
                        childAtPosition(
                                withId(R.id.main_content),
                                1))),
                isDisplayed())).check(withItemCount(FAVORITE_ITEMS_COUNT + 1));
    }

    private static Matcher<View> childAtPosition(
            final Matcher<View> parentMatcher, final int position) {

        return new TypeSafeMatcher<View>() {
            @Override
            public void describeTo(Description description) {
                description.appendText("Child at position " + position + " in parent ");
                parentMatcher.describeTo(description);
            }

            @Override
            public boolean matchesSafely(View view) {
                ViewParent parent = view.getParent();
                return parent instanceof ViewGroup && parentMatcher.matches(parent)
                        && view.equals(((ViewGroup) parent).getChildAt(position));
            }
        };
    }
}